--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                     </div>
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="cabañashome3.png" class="d-block w-100">
+                        <img src="cabañashome3.png" alt="pileta" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="cabañashome2.png" class="d-block w-100">
+                        <img src="cabañashome2.png" alt="galeria del alojamiento" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="cabañashome1.png" class="d-block w-100">
+                        <img src="cabañashome1.png" alt="patio y espacio verde" class="d-block w-100">
                     </div>
                     </div>
                 </div>
