--- a/Experiencias.html
+++ b/Experiencias.html
@@ -51,11 +51,11 @@
       <section class="sectionUno">
         <h1>¿Qué hacer en Salta? ¿Qué puedo visitar y conocer?</h1>
         <p>Todo eso vas a poder encontrar en esta sección de artículos.</p>
-        <article class= "section_uno section_uno--article">
+        <article class= "section_uno--article">
             <img src="articulo1.png">
             <h2 id="section_uno--articleTitle">¿Cuáles son los 5 mejores lugares para pasear por Salta?</h2>
         </article>
-        <article class= "section_dos section_dos--article">
+        <article class= "section_dos--article">
           <img src="articulo2.png">
           <h2 id="section_dos--articleTitle">Escapadas de un día al interior de la provincia</h2>
       </article>
